--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
+/*
+
+  SYSTEM FONTS
+
+*/
+.sans-serif { font-family: -apple-system, 'avenir next', avenir, roboto, noto, 'helvetica neue', helvetica, ubuntu, 'franklin gothic medium', 'century gothic', sans-serif; }
+/*
+  Reference:
+
+  https://webkit.org/blog/3709/using-the-system-font-in-web-content/
+  https://en.wikipedia.org/wiki/Avenir_(typeface)
+  https://www.google.com/design/spec/style/typography.html#typography-typeface
+
+*/
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #101624;
 }
